# ark-nuwa-desktop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
cli/: ark-nuwa.mjs
docs/screenshots/: README.md
scripts/: gen-cert.ps1  gen-icon.mjs
src/: api.ts  dom.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: anthropic.rs  ark.rs  commands.rs  config.rs  distill.rs  lib.rs  llm.rs  main.rs  mock.rs  session.rs
src-tauri/src/workflow/: context.rs  engine.rs  mod.rs  model.rs
src-tauri/tests/: distill_e2e.rs  engine.rs
src/views/: chat.ts  editor.ts  runner.ts  settings.ts
workflows/: nuwa-distill.yaml
