[package]
name = "ark-nuwa-desktop"
version = "0.2.0"
description = "Ark distillation agent with configurable workflows"
authors = ["ReyMao"]
license = "MIT"
repository = "https://github.com/reymondmeking-dot/ark-nuwa-desktop"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ark_nuwa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[features]
# this feature is used for production builds where `devUrl` is set to a static file
custom-protocol = ["tauri/custom-protocol"]
